@@ -1,6 +1,7 @@
 package com.pharmacyapp;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
@@ -23,6 +24,9 @@ import java.util.List;
 @ComponentScan(basePackages = "com.pharmacyapp")
 public class PharmacyApp {
 
+    @Value("${application.cors.origins:*}")
+    private List<String> allowedOrigins;
+
     public static void main(String[] args) {SpringApplication.run(PharmacyApp.class, args);}
 
     @Bean
@@ -33,17 +37,11 @@ public class PharmacyApp {
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:8080"));
-        config.setAllowedHeaders(Arrays.asList(
-                "Origin", "Access-Control-Allow-Origin", "Content-Type",
-                "Accept", "Jwt-Token", "Authorization", "X-Requested-With",
-                "Access-Control-Request-Method", "Access-Control-Request-Headers",
-                "File-Name")); // Add "File-Name" to the allowed headers
-        config.setExposedHeaders(Arrays.asList(
-                "Origin", "Content-Type", "Accept", "Jwt-Token", "Authorization",
-                "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials", "File-Name"));
-        config.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        //config.setAllowCredentials(true);
+        config.setAllowedOrigins(allowedOrigins);
+        config.setAllowedHeaders(List.of("*")); // not recommended for production
+        config.setExposedHeaders(List.of("*")); // not recommended for production
+        config.setAllowedMethods(List.of("*")); // not recommended for production
         source.registerCorsConfiguration("/**", config);
         // Log the CORS configuration
         log.info("CORS configuration: {}", config);
